@startuml admin_approve_payout_request_class_diagram

title Admin Approve Payout Request - Class Diagram

class PayoutManagement {
  +handleApprove(payoutId)
  +handleReject(payoutId)
  +showConfirmModal(action, payout)
  +fetchPayouts()
}

class AdminPayoutRoute {
  +PUT /:id/approve
  +PUT /:id/reject
}

class verifyJWTToken {
  +verify(req, res, next)
}

class requireAdmin {
  +checkAdminRole(req, res, next)
}

class AdminPayoutController {
  +approvePayout(req, res)
  +rejectPayout(req, res)
}

class BookingPayout {
  +payout_id: BIGINT
  +booking_id: BIGINT
  +total_rental_amount: DECIMAL
  +payout_status: ENUM
  +payout_method: ENUM
  +payout_account_info: JSON
  +requested_at: DATE
  +processed_at: DATE
  +completed_at: DATE
  +failure_reason: TEXT
  +findOne(options)
  +update(data, options)
}

class Booking {
  +booking_id: BIGINT
  +renter_id: BIGINT
  +vehicle_id: BIGINT
  +start_date: DATE
  +end_date: DATE
  +total_amount: DECIMAL
  +status: ENUM
  +findByPk(id)
}

class Vehicle {
  +vehicle_id: BIGINT
  +owner_id: BIGINT
  +model: STRING
  +license_plate: STRING
  +findByPk(id)
}

class User {
  +user_id: BIGINT
  +full_name: STRING
  +email: STRING
  +phone_number: STRING
  +role: ENUM
  +findByPk(id)
}

class Transaction {
  +transaction_id: BIGINT
  +booking_id: BIGINT
  +from_user_id: BIGINT
  +to_user_id: BIGINT
  +amount: DECIMAL
  +type: ENUM
  +status: ENUM
  +note: TEXT
  +create(data, options)
}

class Notification {
  +notification_id: BIGINT
  +user_id: BIGINT
  +title: STRING
  +content: TEXT
  +type: ENUM
  +create(data, options)
}

PayoutManagement --> AdminPayoutRoute : calls
AdminPayoutRoute --> verifyJWTToken : uses
AdminPayoutRoute --> requireAdmin : uses
AdminPayoutRoute --> AdminPayoutController : delegates to
AdminPayoutController --> BookingPayout : queries and updates
AdminPayoutController --> Booking : queries
AdminPayoutController --> Vehicle : queries
AdminPayoutController --> User : queries
AdminPayoutController --> Transaction : creates
AdminPayoutController --> Notification : creates

BookingPayout }o--|| Booking : belongs to
Booking }o--|| User : renter
Booking }o--|| Vehicle : books
Vehicle }o--|| User : owner
Transaction }o--|| Booking : references
Notification }o--|| User : sent to

@enduml